<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <POU Name="P_EmShutdownBPumpRun" Id="{cfc8e376-ad02-4b75-93d7-99e54105870f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_EmShutdownBPumpRun
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//shut down all components except brine pump

StateMachine.bCompRun		:=	FALSE;
DigOutputs.bOutpComp		:=	FALSE;

StateMachine.bAuxHeatOp		:=	FALSE;
DigOutputs.bOutpAH			:=	FALSE;

StateMachine.bBrinePump		:=	TRUE;
AnaOutputs.stOutpBP.fVal	:=	10;
AnaOutputs.stOutpBP			:=	F_ConvLinAnaOutp(stOutput:=AnaOutputs.stOutpBP);

StateMachine.bIntHeatCPump	:=	FALSE;
AnaOutputs.stOutpIntHP.fVal	:=	0.75;	//0.75 Volt: Pump stop
AnaOutputs.stOutpIntHP		:=	F_ConvLinAnaOutp(stOutput:=AnaOutputs.stOutpIntHP);

StateMachine.bExtHeatCPump	:=	TRUE;
AnaOutputs.stOutpExtHP.fVal	:=	10;	
AnaOutputs.stOutpExtHP			:=	F_ConvLinAnaOutp(stOutput:=AnaOutputs.stOutpExtHP);

StateMachine.bCircPump		:=	TRUE;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>